--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sample Project</title>
+    <link href="src/css/style.css" type="text/css" rel="stylesheet">
+    <h1>LIST OF WORDS</h1>
+</head>
+<body>
+
+<div id="a">
+    <p> Abstract</p>
+</div>
+<div id ="b">
+    <p> Janitor</p>
+</div>
+<div id="a">
+    <p> Plead</p>
+</div>
+<div id="b">
+    <p> Foster</p>
+</div>
+<div id="a">
+    <p> Obstruction </p>
+</div>
+<div id="b">
+    <p> Equinox</p>
+</div>
+<div id="a">
+    <p> Barren </p>
+</div>
+<div id="b">
+    <p> Rendition</p>
+</div>
+<div id="a">
+    <p> Opaque</p>
+</div>
+<div id="b">
+    <p> Sterile</p>
+</div>
+
+
+</body>
+</html>
